<resources>
    <string name="app_name">Balance Out</string>
    <string name="title_home">Home</string>
    <string name="title_activity">Activity</string>
    <string name="title_profile">Profile</string>
    <string name="title_reminder">Reminder</string>
    <string name="title_status_debit">Debt/credit status</string>
    <string name="status_debit">Ooops! You are indebted to someone.</string>
    <string name="status_credit">Remember that you have to get credit from someone!</string>
    <string name="status_parity">In general it\'s all right! You are balanced out.</string>
    <string name="value_status_debit_group">Ooops! You owe someone</string>
    <string name="value_status_credit_group">Remember that you must receive a credit of</string>
    <string name="email_address">Email address</string>
    <string name="passwrod_editText">Password</string>
    <string name="login_page_message">Looks like you haven\'t logged in yet, do it now to take full advantage of Balance Out</string>
    <string name="registered_message">We take great care of the privacy of our users, for this
    all you need is a name, an email address and a password to register and start using Balance Out</string>
    <string name="login_text">Login</string>
    <string name="signIn_text">Sign in</string>
    <string name="not_registed_message"><u>Not registered yet? Register now</u></string>
    <string name="login_problem_message"><u>Password forgotten?</u></string>
    <string name="logout">logout</string>
    <string name="google_login">Or sign in with Google</string>
    <string name="loading_access">Login...</string>
    <string name="example_name_group">Example group</string>
    <string name="status_debit_group">in debt</string>
    <string name="status_credit_group">you have to get credit</string>
    <string name="status_parity_group">balance out</string>
    <string name="title_help_status_debit">What it means?</string>
    <string name="text_help_status_debit">The debt / credit status is your general debt situation within the various groups. It is used to notify you immediately if you are indebted to someone or need to receive credit in even one group.</string>
    <string name="text_help_status_debit_group">The debt / credit status is your debt situation within the group. It is used to notify you immediately if you are indebted to someone or need to receive a credit and how much the sum is.</string>
    <string name="understand">I understand</string>
    <string name="tutorial_example_group">Don\'t worry, you don\'t have any debt! This is an example group to help you understand how our app works. As soon as you log in this group will disappear and you can create new ones.</string>
    <string name="tutorial_example_movement">Here is how your debts or claims against other group members are displayed. As soon as you login you can also mark your debts as "tied" after you have paid them.</string>
    <string name="tutorial_example_expense">This is how expenses made by group members are displayed. As soon as you login you can see the details of expenses.</string>
    <string name="registrationTitle">Registration</string>
    <string name="title_control_email">Check your mailbox</string>
    <string name="not_logged_message_fragment">Sorry, but you must log in or register, if you haven\'t already, to see the content of this page.</string>
    <string name="not_logged_message_add_group">Ooops, you must register or log in to add a new group.</string>
    <string name="not_logged_message_add_expense">Ooops, you must register or log in to add a new expense.</string>
    <string name="not_logged_message_menu">Ooops, you must register or log in to be able to use all the features of the app.</string>
    <string name="not_email_verificated_message_fragment">You\'re almost there, you should have received an email to verify your account. Then you can start using Balance Out in all its features.</string>
    <string name="title_members">Members</string>
    <string name="title_add_member">Add member</string>
    <string name="title_exit_group">Exit group</string>
    <string name="title_edit_group">Edit group</string>
    <string name="title_advanced">Advanced</string>
    <string name="title_settings">Settings</string>
    <string name="loading_registraion">Registrazione...</string>
    <string name="required_field">Required</string>
    <string name="password_rule">The password must contain at least:\n
                        • 1 uppercase letter\n
                        • 1 number\n
                        • 1 special character between: [!,@,#,$,%,^,&amp;,+,=,]\n
                        • No white space</string>
    <string name="help_registration_email">Enter a valid email address</string>
    <string name="title_general">General</string>
    <string name="title_account">Account</string>
    <string name="title_logout_settings">Log out from your profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_language">Language</string>
    <string name="title_info_settings">Info app</string>
    <string name="description_info_settings">View the app version, release data, creator</string>
    <string name="title_dark_theme">Dark theme</string>
    <string name="description_dark_theme">It allows you to invert the colors of the app by setting a dark background where possible</string>
    <string name="title_created_on">Created on</string>
    <string name="title_join_group">Join a group</string>
    <string name="title_create_group">Create group</string>
    <string name="title_overview">Overview</string>
    <string name="title_expense">Expense</string>
    <string name="title_movements">Movements</string>
    <string name="example_debt_movement">3</string>
    <string name="title_name_profile">Name</string>
    <string name="title_surname_profile">Surname</string>
    <string name="title_email_profile">Email</string>
    <string name="title_modify_password">Modify password</string>
    <string name="title_modify_profile">Modify profile</string>
    <string name="title_save_modify_profile">Save changes</string>
    <string name="title_message_error_empty">Sorry but you must complete all the fields!</string>
    <string name="title_paid_single">paid</string>
    <string name="example_expense_1">Example expense 1</string>
    <string name="example_expense_2">Example expense 2</string>
    <string name="title_name_group">Name of group</string>
    <string name="title_error_insert_name_group">Insert the name of group</string>
    <string name="title_debt_semplification">Debt semplification</string>
    <string name="title_public_movements">Public movements</string>
    <string name="message_error_read_photo">Error load photo.</string>
    <string name="message_error_permission_read_external">Excuse us, but we need your permission to read a picture from your gallery.</string>
    <string name="title_administrator">Administrator</string>
    <string name="error_db">Database error, try again later</string>
    <string name="title_registration_name">Name</string>
    <string name="title_registration_surname">Surname</string>
    <string name="title_registration_confirm_password">Confirm password</string>
    <string name="msg_accept_privacy">I\'m agree with the BalanceOut\'s terms of use and privacy policy</string>
    <string name="msg_error_password">Password doesn\'t match</string>
    <string name="helper_registration_name">Insert your name</string>
    <string name="helper_registration_surname">Insert your surname</string>
    <string name="helper_registration_confirm_password">Confirm your Password</string>
    <string name="error_registration_name">You don\'t insert your name</string>
    <string name="error_registration_surname">You don\'t insert your surname</string>
    <string name="error_registration_email">You don\' insert your email</string>
    <string name="error_registration_passoword">You don\'t insert your password</string>
    <string name="base_dynamic_link">https://balanceout.page.link/</string>
    <string name="join_message">Join my Balance Out group!</string>
    <string name="title_new_expense">New expense</string>
    <string name="title_which_group">For which group?</string>
    <string name="title_who_pay">Who did he pay?</string>
    <string name="title_me">Me</string>
    <string name="title_euro_symbol">€</string>
    <string name="title_info_expense">Info expense</string>
    <string name="title_add_receipt">Add receipt photo</string>
    <string name="type_division_equal">Equal parts</string>
    <string name="type_division_disequal">By person</string>
    <string name="title_division">Division</string>
    <string name="title_description">Description</string>
    <string name="title_add_expense">Add expense</string>
    <string name="title_data_expense">Data expense</string>
    <string name="zero_amount_debit">00.00</string>
    <string name="title_receipt_added">Receipt added</string>
    <string name="title_insert_description">Insert a description</string>
    <string name="title_insert_data_expense">Insert data of expense</string>
    <string name="title_insert_amount_expense">Insert amount of expense</string>
    <string name="title_insert_amount_debt">Insert amount of debt</string>
    <string name="title_select_almost_debitor">Select almost one debitor</string>
    <string name="title_error_input_debts">Attention! The sum of the shares divided among the group members does not correspond to the amount of the expenditure.</string>
    <string name="title_delete_members">Delete members</string>
    <string name="title_delete_group">Delete groups</string>
    <string name="title_detail_expense">Expense detail</string>
    <string name="title_loading">Loading...</string>
    <string name="title_view_receipt">View receipt</string>
    <string name="expence_added">Expense added</string>
    <string name="expence_not_added">Sorry, expense not added</string>
    <string name="title_empty_receipt">No receipt has been entered</string>
    <string name="title_must_pay">must pay</string>
    <string name="dialog_email_message">Insert your email to reset password</string>
    <string name="dialog_send_email">Send email</string>
    <string name="dialog_cancel_email">Cancel</string>
    <string name="title_amount_expense_is">The amount of expense is </string>
    <string name="msg_error_reset_password">"You don't insert your email"</string>
    <string name="title_expense_cancelled">Expense cancelled</string>
    <string name="msg_error_privacy">You don\'t check our privacy policy</string>
    <string name="title_toolbar_change_password">Change Password</string>
    <string name="title_old_password">Old password</string>
    <string name="title_new_password">New password</string>
    <string name="title_confirm_new_password">Save changes</string>
    <string name="helper_old_password">Insert your old password</string>
    <string name="helper_confirm_password">Confirm your password</string>
    <string name="msg_error_old_password">You don\'t insert your password</string>
    <string name="msg_error_confirm_password">You don\'t insert your confirm password</string>
    <string name="helper_rules_password">Your password doesn\'t respect rules</string>
    <string name="msg_error_old_password_new_password">Your old password isn\'t correct</string>
    <string name="title_no_groups">There aren\'t groups to view, try reloading the page or create your own</string>
    <string name="title_no_expense">There aren\'t expense to view, try reloading the page o insert a new one</string>
    <string name="title_error_new_expense_no_groups">You can’t add an expense if you’re not in any group</string>
    <string name="pairer_devices">Pairer devices</string>
    <string name="discovered_devices">Discovered devices</string>
    <string name="return_button">Cancel</string>
</resources>