<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="account"
        android:title="@string/title_account">
        <Preference
            android:key="logout"
            android:title="@string/title_logout_settings" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="general"
        android:title="@string/title_general">

        <Preference
            android:key="notificationsSetting"
            android:title="@string/title_notifications" />


        <Preference
            android:key="infoSettings"
            android:summary="@string/description_info_settings"
            android:title="@string/title_info_settings" />
    </PreferenceCategory>


</PreferenceScreen>