<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="general"
        android:title="@string/title_general">

        <Preference
            android:key="notificationsSetting"
            android:title="@string/title_reminder" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="darkThemeSetting"
            android:summary="@string/description_dark_theme"
            android:title="@string/title_dark_theme" />
        <EditTextPreference
            android:key="username"
            android:summary="Please provide your username"
            android:title="Your Name" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="applicationUpdates"
            android:summary="This option if selected will allow the application to check for latest versions."
            android:title="Application Updates" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/listArray"
            android:entryValues="@array/listValues"
            android:key="downloadType"
            android:summary="Select the kind of data that you would like to download"
            android:title="Download Details" />
    </PreferenceCategory>
</PreferenceScreen>