<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/memberConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/mtrl_card_spacing">

    <ImageView
        android:id="@+id/imgMemberImageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_profile_black_24dp"
        android:padding="@dimen/mtrl_card_spacing"
        android:layout_margin="@dimen/mtrl_card_spacing"
        android:background="@drawable/circle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameMemberTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginTop="@dimen/mtrl_card_spacing"
        android:text="@string/title_name_profile"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/title_card_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imgMemberImageView"
        app:layout_constraintRight_toLeftOf="@+id/administratorMemberTextView"/>

    <TextView
        android:id="@+id/emailMemberTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/secondary_text"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginTop="@dimen/card_margin_text_vertical_near"
        android:text="@string/title_email_profile"
        android:textSize="@dimen/subtitle_card_size"
        app:layout_constraintTop_toBottomOf="@+id/nameMemberTextView"
        app:layout_constraintLeft_toRightOf="@+id/imgMemberImageView"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/administratorMemberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/secondary_text"
        android:layout_marginRight="@dimen/text_horizontal_margin"
        android:layout_marginTop="@dimen/mtrl_card_spacing"
        android:text="@string/title_administrator"
        android:textSize="@dimen/subtitle_card_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>