<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/mtrl_card_spacing">

    <ImageView
        android:id="@+id/imgPayerDetailExpenseImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/circle"
        android:padding="@dimen/mtrl_card_spacing"
        android:src="@drawable/ic_profile_black_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/namePayerDetailExpenseTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/card_margin_text_horizontal"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/title_me"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/title_card_size"
        app:layout_constraintLeft_toRightOf="@+id/imgPayerDetailExpenseImageView"
        app:layout_constraintRight_toLeftOf="@+id/amountDetailExpenseTextView"
        app:layout_constraintTop_toTopOf="@+id/imgPayerDetailExpenseImageView"
        app:layout_constraintBottom_toBottomOf="@+id/imgPayerDetailExpenseImageView"/>


    <TextView
        android:id="@+id/amountDetailExpenseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/mtrl_card_spacing"
        android:textStyle="bold"
        android:text="@string/example_debt_movement"
        android:textColor="@color/primary"
        android:textSize="@dimen/title_card_size"
        app:layout_constraintRight_toLeftOf="@+id/euroDetailExpenseTextView"
        app:layout_constraintTop_toTopOf="@+id/imgPayerDetailExpenseImageView"
        app:layout_constraintBottom_toBottomOf="@+id/imgPayerDetailExpenseImageView" />


    <TextView
        android:id="@+id/euroDetailExpenseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/card_margin_text_horizontal"
        android:text="@string/title_euro_symbol"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/title_card_size"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgPayerDetailExpenseImageView"
        app:layout_constraintBottom_toBottomOf="@+id/imgPayerDetailExpenseImageView" />


</androidx.constraintlayout.widget.ConstraintLayout>